crates/compiler/src/snapshots/compiler__parser__test__prop_dir.snap
---
source: crates/compiler/src/parser.rs
expression: dir

---
Dir:
  name: bind
  argument:
    Static: stop
  modifiers:
    - prop
  expression:
    content:
      raw: tt
      ops:
        bits: 18
    location:
      start:
        offset: 9
        line: 1
        column: 10
      end:
        offset: 13
        line: 1
        column: 14
  head_loc:
    start:
      offset: 3
      line: 1
      column: 4
    end:
      offset: 8
      line: 1
      column: 9
  location:
    start:
      offset: 3
      line: 1
      column: 4
    end:
      offset: 13
      line: 1
      column: 14

